--- a/index.html
+++ b/index.html
@@ -1,13 +1,158 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta Tags Essenciais para SEO -->
+    <title>João Claudiano - Projetos de Desenvolvedor no GitHub Pages</title>
+    <meta name="description" content="Hub de ferramentas para desenvolvedores criadas por João Claudiano. Acesse o GitTree para visualizar repositórios do GitHub e outros projetos de código aberto.">
+    <meta name="keywords" content="GitHub, GitTree, visualizador de repositórios, ferramentas para desenvolvedores, código aberto, João Claudiano">
+    <meta name="author" content="João Claudiano">
+    <!-- Open Graph para redes sociais (opcional mas recomendado) -->
+    <meta property="og:title" content="João Claudiano - Projetos de Desenvolvedor">
+    <meta property="og:description" content="Ferramentas práticas e de código aberto para desenvolvedores.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://joaoclaudiano.github.io">
+    <!-- Tag obrigatória do Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-2518079690291956">
-    <title>Meus Projetos</title>
+    <style>
+        * { box-sizing: border-box; margin: 0; padding: 0; }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+            line-height: 1.7;
+            color: #333;
+            background-color: #f9f9f9;
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        header {
+            text-align: center;
+            padding: 3rem 1rem;
+            background: linear-gradient(135deg, #0366d6 0%, #2a8af0 100%);
+            color: white;
+            border-radius: 10px;
+            margin-bottom: 2.5rem;
+        }
+        h1 {
+            font-size: 2.8rem;
+            margin-bottom: 0.5rem;
+        }
+        .tagline {
+            font-size: 1.3rem;
+            opacity: 0.9;
+            font-weight: 300;
+        }
+        main {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            margin-bottom: 3rem;
+        }
+        .project-card {
+            background: white;
+            border-radius: 10px;
+            padding: 1.8rem;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            border-top: 4px solid #0366d6;
+        }
+        .project-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+        }
+        .project-card h2 {
+            color: #0366d6;
+            margin-bottom: 0.8rem;
+            font-size: 1.5rem;
+        }
+        .project-card p {
+            color: #555;
+            margin-bottom: 1.5rem;
+        }
+        .btn {
+            display: inline-block;
+            background-color: #0366d6;
+            color: white;
+            padding: 0.8rem 1.5rem;
+            text-decoration: none;
+            border-radius: 6px;
+            font-weight: 600;
+            transition: background-color 0.3s ease;
+        }
+        .btn:hover {
+            background-color: #024ea1;
+        }
+        footer {
+            text-align: center;
+            padding: 2rem 1rem;
+            margin-top: 3rem;
+            border-top: 1px solid #eee;
+            color: #777;
+        }
+        .footer-links {
+            margin-top: 1rem;
+        }
+        .footer-links a {
+            color: #555;
+            margin: 0 0.8rem;
+            text-decoration: none;
+        }
+        .footer-links a:hover {
+            text-decoration: underline;
+            color: #0366d6;
+        }
+        @media (max-width: 768px) {
+            h1 { font-size: 2.2rem; }
+            .tagline { font-size: 1.1rem; }
+            main { grid-template-columns: 1fr; }
+        }
+    </style>
 </head>
 <body>
-    <h1>Olá!</h1>
-    <p>Esta é a página raiz do meu GitHub Pages.</p>
-    <p><a href="/gittree/index.html">Ver projeto GitTree</a></p>
-    <p><a href="/html-teste/">Ver projeto de teste HTML</a></p>
+    <header role="banner">
+        <h1>João Claudiano</h1>
+        <p class="tagline">Ferramentas práticas para desenvolvedores</p>
+    </header>
+
+    <main role="main">
+        <article class="project-card">
+            <h2>GitTree</h2>
+            <p>Uma ferramenta de visualização interativa para explorar a estrutura de diretórios de qualquer repositório público do GitHub. Navegue por arquivos e pastas de forma clara e intuitiva.</p>
+            <a href="/gittree/index.html" class="btn" aria-label="Acessar a ferramenta GitTree">Acessar GitTree</a>
+        </article>
+
+        <article class="project-card">
+            <h2>HTML Teste</h2>
+            <p>Um playground e ambiente de testes para experimentar rapidamente códigos em HTML, CSS e JavaScript. Ideal para prototipar ideias e aprender conceitos front-end.</p>
+            <a href="/html-teste/" class="btn" aria-label="Acessar o ambiente de testes HTML">Acessar HTML Teste</a>
+        </article>
+
+        <!-- Adicione mais projetos aqui no futuro -->
+        <!--
+        <article class="project-card">
+            <h2>Nome do Novo Projeto</h2>
+            <p>Descrição breve e atrativa do novo projeto.</p>
+            <a href="/link-para-projeto/" class="btn">Acessar Projeto</a>
+        </article>
+        -->
+    </main>
+
+    <footer role="contentinfo">
+        <p>© <span id="currentYear"></span> João Claudiano. Conteúdo e ferramentas de código aberto.</p>
+        <div class="footer-links">
+            <a href="/privacy.html" aria-label="Leia nossa Política de Privacidade">Política de Privacidade</a> |
+            <a href="/terms.html" aria-label="Leia nossos Termos de Uso">Termos de Uso</a> |
+            <a href="/about.html" aria-label="Saiba mais sobre mim e os projetos">Sobre</a>
+        </div>
+        <p style="margin-top: 1rem; font-size: 0.9em;">
+            Hospedado no <a href="https://pages.github.com" target="_blank">GitHub Pages</a>.
+        </p>
+    </footer>
+
+    <script>
+        // Script simples para mostrar o ano atual no footer
+        document.getElementById('currentYear').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
