Add 'Contato' link to footer in index.html

--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
     <footer role="contentinfo">
         <p>© <span id="currentYear"></span> João Claudiano. Conteúdo e ferramentas de código aberto.</p>
         <div class="footer-links">
-            <a href="/privacy.html" aria-label="Leia nossa Política de Privacidade">Política de Privacidade</a> |
-            <a href="/terms.html" aria-label="Leia nossos Termos de Uso">Termos de Uso</a> |
-            <a href="/about.html" aria-label="Saiba mais sobre mim e os projetos">Sobre</a>
+            <a href="/privacy.html">Política de Privacidade</a> |
+            <a href="/terms.html">Termos de Uso</a> |
+            <a href="/about.html">Sobre</a> |
+            <a href="/contact.html">Contato</a>
         </div>
         <p style="margin-top: 1rem; font-size: 0.9em;">
             Hospedado no <a href="https://pages.github.com" target="_blank">GitHub Pages</a>.
